--- a/MERN_PROJECTS/Booking_App/client/public/index.html
+++ b/MERN_PROJECTS/Booking_App/client/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="MERN SOCIAL MEDIA APP" />
+		<meta name="description" content="Booking.com" />
 		<link rel="icon" href="%PUBLIC_URL%/logo.png" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
